# cpp-template

./: .clang-format  .clang-tidy  CMakeLists.txt
cmake/: get_boost_lib.cmake
